<resources>
    <string name="app_name">Task Manager</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="sort">Sort</string>
    <string name="search_task">Search Task</string>
    <string name="update_task">Update Task</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="category">Category</string>
    <string name="priority">Priority</string>
    <string name="select_date">Select Date</string>
    <string name="completed">Completed</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="add_task">Add task</string>
    <string name="all">All</string>
    <string name="pending">Pending</string>
    <string name="general">General</string>
    <string name="personal">Personal</string>
    <string name="family">Family</string>
    <string name="funs">Fun</string>
    <string name="games">Games</string>
    <string name="tour">Tour</string>
    <string name="date">Date</string>
    <string name="priority_high_to_low">Priority - High to low</string>
    <string name="priority_low_to_high">Priority - Low to high</string>
    <string name="completed1">Completed</string>
    <string name="please_check_your_internet_connection">Please check your internet connection</string>
    <string name="please_update_all_fields">Please update all fields</string>

    <string-array name="categories">
        <item>General</item>
        <item>Personal</item>
        <item>Family</item>
        <item>Fun</item>
        <item>Games</item>
        <item>Tour</item>
    </string-array>

    <string-array name="priorities">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_updated_successfully">Task updated successfully</string>
    <string name="task_added_successfully">Task added successfully</string>
    <string name="delete_task">Delete Task</string>
    <string name="are_you_sure_you_want_to_delete_the_task">Are you sure you want to delete the task?</string>
    <string name="ok">OK</string>
</resources>